Fix knob overflow and eventlistener removal bug

--- a/src/components/shared/knob/knob.scss
+++ b/src/components/shared/knob/knob.scss
@@ -3,16 +3,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
 
   input {
     position: relative;
     appearance: none;
     height: 40px;
     width: 40px;
-    border-radius: 20px;
+    border-radius: 40px;
     background-color: white;
     border: 1px solid black;
+    touch-action: none;
 
     &::-webkit-slider-thumb {
       appearance: none;
@@ -24,6 +24,7 @@
 
     &::after {
       content: '●';
+      font-size: 12px;
       color: black;
       position: absolute;
       left: 16px;
